--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://georgebdev.com",
+	"homepage": "https://georgebdev.com/portfolio",
 	"name": "my-portfolio",
 	"version": "0.0.1",
 	"scripts": {
