--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
+		"@iconify/svelte": "^3.0.1",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@popperjs/core": "^2.11.6",
 		"@sveltejs/adapter-auto": "^1.0.0",
